# egface

./: Basis.hpp  CMakeLists.txt  EdgeBasis.cpp  EdgeBasis.hpp  FaceBasis.cpp  FaceBasis.hpp  Factorial.cpp  Factorial.hpp  NodalBasis.cpp  NodalBasis.hpp  README.md  Simplex.cpp  Simplex.hpp  SimplexIntersect.cpp  SimplexIntersect.hpp  SimplexIter.cpp  SimplexIter.hpp  egfCellLocator.cpp  egfCellLocatorType.hpp  egfField.cpp  egfFieldType.hpp  egfGrid.cpp  egfGridType.hpp  egfPointIntersector.cpp  egfPointIntersectorType.hpp  egfUnstructuredField3d.cpp  egfUnstructuredField3dType.hpp  egfUnstructuredGrid3d.cpp  egfUnstructuredGrid3dType.hpp  lapack_names.h
data/: cube.vtk  generateCubeGrid.py  ugrid2d.vtk
tests/: CMakeLists.txt  egfFormSetter.py  testCellLocator.py  testEdgeBasis.cxx  testFaceBasis.cxx  testField.py  testGrid.py  testNodalBasis.cxx  testPointIntersectorLine.py  testPointIntersectorLineMarginal.cxx  testPointIntersectorPoint.py  testPointIntersectorTetrahedron.py  testPointIntersectorTriangle.py  testSimplex.cxx  testSimplex2.cxx  testSimplexIntersect.cxx  testSimplexIter.cxx  testUnstructuredField3d.py  testUnstructuredGrid3d.py
